# imgpro

./: .gitignore  CHANGELOG.md  CLAUDE.md  DONE.md  PRD.md  PR_DESCRIPTION.md  README.md  TASKS.md  imagepro.py  imgpro.py  imgpro.txt  pyproject.toml  requirements.txt
devlog/: 2025-12-04-set-up-venv-linux-mint.txt  2025-12-05-lets-review-the-open-pr.txt  2025-12-05-test-on-actual-images-add-heic-support.txt  2025-12-17-prepare-instagram-images.txt  2026-01-07-align-resize-input-flag.txt  2026-01-07-move-the-completed-tasks-to-done.txt  2026-01-12-prune-stale-branches.txt  2026-01-12-version-1.2.1-release.txt  2026-01-13-add-path-installation.txt  2026-01-26-path-setup-and-directory-fix.md  2026-02-26-pipx-packaging-and-mpo-issue.txt  add-pytest-tests-for-imagepro-info-feature.md  create_initial_version_of_ima_module.md  documenting_imagepro_development.md  image_conversion_and_quality_control.md  image_processing_and_organization.md  imagepro_info_subcommand.md  imagepro_review_add_rename_convert.md  imagepro_webp_support.md  pr_3_description.md  prune_remote_branches.md  update_project_documentation.md
docs/: instagram-image-guide.md
scripts/: README.md  convert-all.sh  organize-all-by-date.sh  organize-by-date.sh  organize-by-orientation.sh  prepare-instagram.sh  rename-all.sh  resize-all.sh
tests/: __init__.py  conftest.py  fixtures.py  test_chain_cli.py  test_chain_helpers.py  test_cli_direct.py  test_convert_cli.py  test_convert_helpers.py  test_info_cli.py  test_info_helpers.py  test_rename_cli.py  test_rename_helpers.py  test_resize_cli.py  test_security.py  (+1 more)
(+2 files in other folders)
