[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "imgpro"
version = "1.3.0"
description = "CLI tool for responsive image processing"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "Pillow>=10.0.0",
    "pillow-heif>=0.13.0",
]

[project.scripts]
imgpro = "imgpro:main"

[tool.setuptools]
py-modules = ["imgpro"]
